# EE519_FinalProject

./: .gitignore  README.md
MATLAB/: EKFStateSubscriberCallback.m  SigmaIDSubscriberCallback.m  UKFStateSubscriberCallback.m  dataCollection.m  jointStateNoiseSubscriberCallback.m  odometrySubscriberCallback.m  quat2Rot.m
MATLAB/DataRecordings/: output100percenterror.mat  output1_50HZ.mat  output2_30HZ.mat  output3_30HZ.mat  output4_30HZ.mat  output5_30HZ_NO_OBSERVS.mat  output6_30HZ_lotsofobvs.mat  outputavg1.mat  outputavg2.mat  outputavg3.mat  outputavg4.mat
src/aruco_detector/: CMakeLists.txt  package.xml
src/aruco_detector/include/aruco_detector/: arucoDetector.hpp  tf_utils.hpp
src/aruco_detector/launch/: arucoDetector.launch.py
src/aruco_detector/src/: arucoDetector.cpp  tf_utils.cpp
src/fp_msgs/: CMakeLists.txt  package.xml
src/fp_msgs/msg/: SigmaID.msg
src/gazebo_ros_pkgs/gazebo_plugins/: CMakeLists.txt
src/gazebo_ros_pkgs/gazebo_plugins/include/gazebo_plugins/: gazebo_ros_joint_state_noise_publisher.hpp
src/gazebo_ros_pkgs/gazebo_plugins/src/: gazebo_ros_joint_state_noise_publisher.cpp
src/matlab_msg_gen/glnxa64/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/matlab_msg_gen/glnxa64/install/include/fp_msgs/msg/: point_rpy.h  point_rpy.hpp  rosidl_generator_c__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
src/matlab_msg_gen/glnxa64/install/include/fp_msgs/msg/detail/: point_rpy__rosidl_typesupport_fastrtps_c.h  point_rpy__rosidl_typesupport_fastrtps_cpp.hpp  point_rpy__rosidl_typesupport_introspection_c.h  point_rpy__rosidl_typesupport_introspection_cpp.hpp  point_rpy__struct.h  point_rpy__struct.hpp  point_rpy__traits.hpp  point_rpy__type_support.c  point_rpy__type_support.h  sigma_id__functions.c  sigma_id__functions.h  sigma_id__rosidl_typesupport_fastrtps_c.h  sigma_id__rosidl_typesupport_introspection_cpp.hpp  sigma_id__struct.h  sigma_id__traits.hpp  sigma_id__type_support.c  sigma_id__type_support.h
src/matlab_msg_gen/glnxa64/install/m/+ros/+internal/+ros2/+custommessages/+fp_msgs/: fp_msgs_msg_PointRPY_1To2_Converter.m  fp_msgs_msg_SigmaID_1To2_Converter.m  sigmaID.m
src/matlab_msg_gen/glnxa64/install/share/ament_index/resource_index/parent_prefix_path/: fp_msgs
src/matlab_msg_gen/glnxa64/install/share/fp_msgs/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/matlab_msg_gen/glnxa64/install/share/fp_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  fp_msgs__rosidl_generator_cExport-release.cmake  fp_msgs__rosidl_generator_cExport.cmake  fp_msgs__rosidl_generator_cppExport.cmake  fp_msgs__rosidl_typesupport_cExport-release.cmake  fp_msgs__rosidl_typesupport_cExport.cmake  fp_msgs__rosidl_typesupport_cppExport-release.cmake  fp_msgs__rosidl_typesupport_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
src/matlab_msg_gen/glnxa64/install/share/fp_msgs/msg/: PointRPY.idl  PointRPY.msg  SigmaID.idl
src/matlab_msg_gen/glnxa64/log/: latest_build
src/matlab_msg_gen/glnxa64/src/fp_msgs/: CMakeLists.txt  Md5checksum.mat  packageInfo.mat
src/matlab_msg_gen/glnxa64/src/fp_msgs/include/fp_msgs/: visibility_control.h
src/matlab_msg_gen/glnxa64/src/fp_msgs/m/+ros/+internal/+ros2/+custommessages/+fp_msgs/: fp_msgs_msg_PointRPY_2To1_Converter.m  fp_msgs_msg_SigmaID_2To1_Converter.m  pointRPY.m
src/matlab_msg_gen/glnxa64/src/fp_msgs/src/: fp_msgs_PointRPY_message.cpp  fp_msgs_SigmaID_message.cpp
src/state_estimation/: CMakeLists.txt  package.xml
src/state_estimation/include/state_estimation/: ekf_node_impl.hpp  ukf_node_impl.hpp
src/state_estimation/launch/: ekfNode.launch.py  ukfNode.launch.py
src/state_estimation/src/: ekf_impl.cpp  ekf_main.cpp  ukf_impl.cpp  ukf_main.cpp
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_EKFProj.launch.py  turtlebot3_SEFinalProj.launch.py
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_waffle/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_world/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/worlds/: turtlebot3_world.world
